--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
   <body>
     <div class="contaner">
       <div class="head_tralor">
-        <!--<h1 class="title">Kyoka Okawara</h1>-->
-        <h2 class="title">大河原　杏花</h2>
+        <h1 class="title">Kyoro</h1>
+        <!--<h2 class="title">大河原　杏花</h2>-->
         <div class="tralors">
           <div class="tralor">
             <div class="tralor_left">
-              <h4>自己紹介</h4>
+              <!--<h4>自己紹介</h4>-->
+              <h4>profile<h4>
               <div class="aboutme">
                 <p class="item">生年月日</p>
                 <p class="detail">1993年9月27日</p>
                 <p class="item">住所</p>
-                <p class="detail">埼玉県川越市霞ヶ関東1-2-5</p>
+                <p class="detail">埼玉県</p>
                 <p class="item">電話番号</p>
-                <p class="detail">08012593487</p>
-                <p class="item">メールアドレス</p>
-                <p class="detail">disten.94sea@gmail.com</p>
-                <p class="item">職務経歴</p>
+                <p class="detail">080---</p>
+                <p class="item">mail</p>
+                <p class="detail">---@gmail.com</p>
+                <p class="item">Job Experiense </p>
                 <p class="detail_year">2019年2月～2019年7月</p>
                 <p class="job_detail">  クリーナー（アルバイト）/ ニュージーランド</p>
                 <p class="detail_year">2018年10月～2019年7月</p>
