--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>portfolio_kyokaokawara </title>
+    <title>portfolio_Kyoro-chan </title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   </head>
@@ -25,6 +25,7 @@
                 <p class="detail">080---</p>
                 <p class="item">mail</p>
                 <p class="detail">---@gmail.com</p>
+                <!--<p class="item">職務経歴</p>-->
                 <p class="item">Job Experiense </p>
                 <p class="detail_year">2019年2月～2019年7月</p>
                 <p class="job_detail">  クリーナー（アルバイト）/ ニュージーランド</p>
@@ -33,7 +34,8 @@
                 <p class="detail_year">2016年2月～2017年12月</p>
                 <p class="job_detail">  システムエンジニア（正社員）/ 日本</p>
               </div>
-              <h4 >スキル</h4>
+              <!--<h4 >スキル</h4>-->
+              <h4 >skill</h4>
               <ul  class="skill_list" style="font-size=30%">
                 <li class="item skill">Visual Basic : 実務経験あり（1年以上2年未満）</li>
                 <li class="item skill">C# : 実務経験あり（1年以上2年未満）</li>
